== Affiliates - Changelog ==

= 5.4.1 =
* WordPress 6.9 compatible.
* WooCommerce 10.4 compatible.
* Fixed incorrect function call parameters. [#127](https://github.com/itthinx/affiliates/pull/127)
* Fixed stored registration field labels translation.
* Fixed translation calls made too early causing deprecated notices.

= 5.4.0 =
* WordPress 6.9 compatible.

= 5.3.0 =
* WordPress 6.8 compatible.
* Fixed the Affiliates Dashboard block preview.
* Fixed the Affiliates Dashboard Earnings block preview.
* Fixed the Affiliates Dashboard Login block preview.
* Fixed the Affiliates Dashboard Overview block preview.
* Fixed the Affiliates Dashboard Profile block preview.
* Fixed the Affiliates Dashboard Registration block preview.
* Revised overview template and using full width to display URL textarea.

= 5.2.0 =
* WordPress 6.8 compatible.
* Revised Robot Cleaner UI elements.
* Fixed Robot Cleaner not showing throbber when doing work.
* Fixed Robots allowed duplicate entries.
* Added more robust API function to use unlimited time for requests (now used for robot cleaning requests).
* Updated information and revised styling of the add-ons section.
* Updated the translation template.
* Removed deprecated/dropped integrations.
* Updated the German translations.
* Updated the Spanish translation.
* Updated the French translation.
* Updated the Hebrew translation.
* Updated the Italian translation.
* Updated the Indonesian translation.
* Updated the Dutch translation.
* Updated the Polish translation.
* Updated the Portuguese translation.
* Updated the Slovak translation.
* Updated the Ukrainian translation.
* Updated the Lithuanian translation.

= 5.1.0 =
* WordPress 6.8 compatible.
* Fixed declaration of dynamic properties of the Affiliates_Pagination class.
* Fixed translation used too early while processing constants.
* Fixed translations used too early while determining currencies.
* Updated recommendations.
* Updated translation template.

= 5.0.0 =